app/assets/stylesheets/bastion/overrides.scss
// Bootstrap overrides
@import "patternfly";

.filter-option label {
  font-weight: normal;
}

.alert {
  margin: 10px;

  ul {
    list-style: none;
  }

  p {
    margin-bottom: 0;
  }

  div {
    display: inline;
  }
}

// Patternfly Overrides
$table-cell-padding-top: 5px;
$table-cell-padding-bottom: 5px;

// Foreman Core Overrides
table {
  margin-bottom: 0 !important;
}

.table th {
  background: inherit;
}

ul {
  -webkit-padding-start: 0;
  -moz-padding-start: 0;
  padding-start: 0;
}

// Prevent Foreman editable icon from bleeding into our pages
.editable {
  background: inherit;
  padding: 0;
}

.breadcrumb > .active a {
  color: $breadcrumb-active-color;
}

.wizard li {
  &:not(:first-child) span {
    padding-left: 15px;
  }
}

